# GRM

./: .gitignore  GRM.sln  README.md  UpdateHistory.txt  testCommit.vb
DownloadOldVersion/: GRMStaticDB_20180213.xml  GRMStaticDB_20250117.xml
DownloadStableBinSampleDataDocuments/: GRMAnalyzer.exe.config  GRMStaticDB.xml
DownloadStableBinariesAndSampleData/: GRM.exe.config  GRMStaticDB.xml  readme.txt
DownloadStableVersion/: GRMStaticDB.xml  pyGRMdll.py
DownloadStableVersion_ExeSampleDataDocuments/: GRM.exe.config  readme.md  readme.txt
GRM2022_beta/: 00_GRM2022개선사항.txt  GRM.vcxproj.filters  GRMStaticDB.xml  GRM_v2022Beta.sln  domain.cpp  (+17 more)
GRM_cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  GRM.vcxproj  GRM.vcxproj.filters  GRM_cpp.sln  GRM_cpp.vcxproj  GRM_cpp.vcxproj.filters  Resource.rc  domain.cpp  flowControl.cpp  grm.h  grm.rc  grmFunctions.cpp  grmVersion.h  grmapi.h  landCover.cpp  main.cpp  network.cpp  output.cpp  outputRT.cpp  outputRaster.cpp  project.cpp  rainfall.cpp  realTime.cpp  realTime.h  realTimeLauncher.cpp  realTimeStarter.cpp  realTime_DBMS.cpp  realtime_common.cpp  resource.h  setupModel.cpp  simulator.cpp  simulatorRT.cpp  soilLayer.cpp  solver.cpp  stdafx.h  surfalceLayer.cpp  weatherData.cpp  wsinfo.cpp
GRM_cpp/pyCPdll/: pyCPdll.py  pyCPdll.pyproj  pyCPdll.sln  pyUsingGRMdll.py
GRM_cpp/pyGRM/: pyGRM.pyproj  pyGRM.sln  pyGRMdll.py
GRM_cpp/zTestSet_GRM_SampleGHG_cpp/: GHG500cpp.gmp
GRM_cpp/zTestSet_GRM_SampleGHG_cpp/data_ori/: GHG_Stream.asc.aux.xml  GHG_Stream.qml  GHG_Watershed.asc  GHG_Watershed.prj  GHG_Watershed.qml
(+466 files in other folders)
